spacing issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ body {
 
 .newsection {
 
-  height: 1450px;
+  height: 370px;
   width: 100%;
   background-color: #FFF;
   margin: 0;
